# CLIFT

./: README.md  pyproject.toml
data/: manifest.json
scripts/: regen_locked_datasets.py
src/clift/: __init__.py  common.py  data.py  eval.py
src/clift/tasks/: __init__.py  algorithmic.py  dynamic_structures.py  functional_mappings.py
src/clift/tasks/spatial/: __init__.py  core.py  formatting.py  probing.py
tests/: test_clift_family_dataset_regression.py  test_common_io.py  test_data_generation.py  test_eval.py
tests/fixtures/clift_families/algorithmic/: baseline.jsonl  manifest.json
tests/fixtures/clift_families/dynamic_structures/: manifest.json
tests/fixtures/clift_families/functional_mappings/: baseline.jsonl  manifest.json
tests/fixtures/clift_families/spatial/: baseline.jsonl  manifest.json
